fixtures/vyper/simple/overflow/positive/u16.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "65535"
#!           ],
#!           "caller": "0x424dDa8c4ee60DDf782F25b91D148034b9b1227d"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: uint16) -> uint16:
    return witness + 1
